* ADDED: Lead error reporting of sgml application through callback for
  demo purposes.  Message now includes the current dialect.

* FIXED: sgml application: do not convert case in XML mode.

* FIXED: Do not report error on not-declared xmlns attribute in XML mode.

* Cleaned Makefiles

VERSION 1.0.6
=============

* ADDED: SGML based documentation of the package with converters to LaTeX
  and HTML in Prolog.

* ADDED/MODIFIED: number(NumberMode) option to the load_structure/3.
  By default NUMBER and NUMBERS tokens are now parsed as tokens of digits.
  Using number(integer) they are converted to Prolog integers, provided
  they fit (Richard O'Keefe).

* ADDED: If a document is parsed without DTD and a catalog is provided,
  try finding a matching DTD file from the catalog.  If successful
  print a warning and load this DTD.

* FIXED: Ensure the -xml flag to the sgml utility works again.

* INSTALL: Check for existence of runtex

* INSTALL: Do not cache Prolog related variables.

* FIXED: signed/unsigned character handling in catalog.c (Richard O'Keefe)

* MODIFIED: Representation for source-locations.


VERSION 1.0.5
=============

* MODIFIED: Get SYSTEM entities relative to the file in which the
  entity is declared.  Get PUBLIC entities from the second argument
  if the catalog (entry) is not found.

* FIXED: Deal with elements only containing shortref references

* MODIFIED: Only insert missing close-tags that should not be on closing
  outer environments, not because an element is encountered that fits in
  an outer environment.  Improves error behaviour.

* ADDED: Print default list values in dtd2pl

* ADDED: Support for the content-model ANY.

* ADDED: option -xml to pl2dtd to force it loading a DTD in XML mode.

* FIXED: Do not expand SHORTREF inside CDATA marked sections and elements.

* ADDED: Properly deal with NUTOKEN: handling DTD default and validate type.

* FIXED: Expand parameter entities in SHORTREF declaraction (Richard O'Keefe).
